# lurq

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  DESIGN_REVAMP_BRIEF.md  Dockerfile  README.md  bakeoff_results.json  docker-compose.yml  drizzle.config.ts  eslint.config.js  lurq-feature-roadmap.md  lurq-v1-master-spec.md  package-lock.json  package.json  pyproject.toml  railway.discover.json  railway.json  railway.serve.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude/: settings.json  settings.local.json
docs/: lurq-application-walkthrough.md  lurq-feature-roadmap.md
drizzle/: 0000_confused_fabian_cortez.sql  0001_aspiring_timeslip.sql  0002_lyrical_lila_cheney.sql  0003_violet_giant_girl.sql  0004_slim_valeria_richards.sql  0005_petite_luke_cage.sql  0006_calm_nighthawk.sql  0007_slimy_naoko.sql  0008_peaceful_tigra.sql  0009_smooth_harrier.sql  0010_curved_amphibian.sql  0011_compat_provenance_closures.sql  0012_api_surfaces.sql  0013_nice_thanos.sql  0014_luxuriant_malcolm_colcord.sql
scripts/: test-model-connections.ts
src/: index.ts
templates/: skill-instructions.md
tests/: apiKeys.test.ts  compact.test.ts  compat.test.ts  compatEdgesBatch.test.ts  core.test.ts  diagram.test.ts  discovery.test.ts  e2bSandbox.test.ts  embeddings.test.ts  format.test.ts  formatError.test.ts  gate.test.ts  ingestQueue.test.ts  installSkill.test.ts  keyIssuance.test.ts  mcp.test.ts  metrics.test.ts  mineEdges.test.ts  npmName.test.ts  onDemandSeed.test.ts  optimize.test.ts  outcomes.test.ts  peerCompat.test.ts  plan.test.ts  planPins.test.ts  (+15 more)
(+262 files in other folders)
