[project]
name = "lurq"
version = "0.0.1"
description = "Open-source simulation engine for high-stakes decisions"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Jaden Ryu" }
]
dependencies = [
    "networkx>=3.2",
    "dowhy>=0.11",
    "anthropic>=0.40",
    "pydantic>=2.5",
    "pandas>=2.1",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "ipykernel>=6.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"